<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stadium"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/teama"
                    android:textColor="@color/teamCol"
                    android:textSize="@dimen/teamTextSize" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/startScore"
                    android:textColor="@color/scoreCol"
                    android:textSize="@dimen/largeScoreTextSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin2dp"
                    android:layout_marginStart="@dimen/margin2dp"
                    android:background="@color/colorBoard"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_a_yellows"
                        style="@style/cardScorePadMar"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/cardScoreTextSize" />

                    <TextView
                        android:id="@+id/team_a_reds"
                        style="@style/cardScorePadMar"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/cardScoreTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin2dp"
                    android:layout_marginStart="@dimen/margin2dp"
                    android:background="@color/colorBoard"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/cardTextMarginBottom"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/yellowCards"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/teamTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/cardTextMarginBottom"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/redCards"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/teamTextSize" />
                </LinearLayout>

                <Button
                    style="@style/buttonStdMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:onClick="addGoalForTeamA"
                    android:text="@string/goal"
                    android:theme="@style/BTNTheme" />

                <Button
                    style="@style/buttonStdMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addYellowForTeamA"
                    android:text="@string/yellowCard"
                    android:theme="@style/BTNThemeYel" />

                <Button
                    style="@style/buttonStdMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addRedForTeamA"
                    android:text="@string/redCard"
                    android:theme="@style/BTNThemeRed" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/teamb"
                    android:textColor="@color/teamCol"
                    android:textSize="@dimen/teamTextSize" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/startScore"
                    android:textColor="@color/scoreCol"
                    android:textSize="@dimen/largeScoreTextSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin2dp"
                    android:layout_marginRight="@dimen/margin2dp"
                    android:background="@color/colorBoard"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_b_yellows"
                        style="@style/cardScorePadMar"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/cardScoreTextSize" />

                    <TextView
                        android:id="@+id/team_b_reds"
                        style="@style/cardScorePadMar"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/cardScoreTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin2dp"
                    android:layout_marginRight="@dimen/margin2dp"
                    android:background="@color/colorBoard"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/cardTextMarginBottom"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/yellowCards"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/teamTextSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/cardTextMarginBottom"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/redCards"
                        android:textColor="@color/blkCol"
                        android:textSize="@dimen/teamTextSize" />
                </LinearLayout>

                <Button
                    style="@style/buttonStdMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:onClick="addGoalForTeamB"
                    android:text="@string/goal"
                    android:theme="@style/BTNTheme" />

                <Button
                    style="@style/buttonStdMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addYellowForTeamB"
                    android:text="@string/yellowCard"
                    android:theme="@style/BTNThemeYel" />

                <Button
                    style="@style/buttonStdMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addRedForTeamB"
                    android:text="@string/redCard"
                    android:theme="@style/BTNThemeRed" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="reset"
            android:text="@string/reset" />
    </RelativeLayout>

</ScrollView>